--- a/Index.html
+++ b/Index.html
@@ -1,25 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;500;700&display=swap" rel="stylesheet">
-    <title>Viagens da Minha Vida</title>
-</head>
-<body>
-    <header>
-        <nav>
-            <a href="#">Home</a>
-            <a href="#">Informações</a>
-            <a href="#">Fale Conosco</a>
-            <a href="#">Mais Informações</a>
-            <a href="#">Orçamento</a>
-        </nav>
-    </header>
-
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="style.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;500;700&display=swap" rel="stylesheet">
+        <title>Viagens da Minha Vida</title>
+    </head>
+    <body>
+        <header>
+            <nav>
+                <a href="#">Home</a>
+                <a href="#">Informações</a>
+                <a href="http://127.0.0.1:5500/Index.html">Fale Conosco</a> <!-- Link para o formulário -->
+                <a href="#">Mais Informações</a>
+                <a href="#">Orçamento</a>
+            </nav>
+        </header>
+        
     <main class="container">
         <div class="list">
             <div class="list-item">
